# criticalcare-copilot

./: .env.example  .gitignore  LICENSE  README.md  RELEASE_CHECKLIST.md  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  (+5 more)
api/: __init__.py  audit.py  errors.py  feature_flags.py  logging_config.py  rate_limiter.py  redaction.py  request_models.py  response_models.py  service.py  validation.py
docs/: clinical-safety-scope.md  data-governance.md  deployment-architecture.md  hf-deployment.md  kaggle-workflow.md  local-development.md  model-card-template.md  netlify-setup.md  product-spec.md  red-team-plan.md  release-gating.md  validation-plan.md
eval/: baseline_metrics.json  benchmark_runner.py  metrics.py  rubric_icu_summary.md  rubric_medication_safety.md
hf/: _gen_client.py  endpoint_client.py  generate_model_card.py  publish_model.py  requirements.txt  space_app.py
rag/: __init__.py  chunking.py  embed_store.py  ingest_documents.py  retriever.py
rules/: allergy_rules.yaml  bundle_rules.yaml  duplicate_therapy_rules.yaml  electrolyte_rules.yaml  hepatic_dose_rules.yaml  monitoring_rules.yaml  prophylaxis_rules.yaml  renal_dose_rules.yaml
safety/: __init__.py  output_guardrails.py  risk_labels.py  rule_engine.py  schema_validation.py
scripts/: bootstrap.ps1  bootstrap.sh  generate_sample_cases.py  run_local_api.py  validate_data.py
tests/: test_api_service.py  test_case_schema.py  test_data_builders.py  test_response_contract.py  test_rule_engine.py
training/: __init__.py  kaggle_runtime.py
(+72 files in other folders)
