[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "criticalcare-copilot"
version = "0.1.0"
description = "Clinician-facing AI decision-support for critical care. Review-required, not autonomous."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "criticalcare-copilot contributors" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "training*", "eval*", "safety*", "rag*", "api*", "hf*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
